feat: renamed stages components to match redux slices
setup stage, trying to fix back button position, moved out start logic from stages

--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -9,7 +9,7 @@
       color: var(--text-primary-color);
 
       font-weight: bold;
-      padding: 20px;
+      padding: 0 20px 20px;
     }
 
     &__welcome-session {
