fix: ellipsis on name rather than pubkey
also cleaned up our contexts a little bit

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -609,6 +609,9 @@
   flex-direction: column;
   align-items: stretch;
   overflow: hidden;
+  max-height: 100%;
+  display: flex;
+  gap: 5px;
 
   .session-icon-button:first-child {
     margin-right: var(--margins-sm);
