feat: updated profile modal with style changes
cleaned up old sass and used style components instead

--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -105,7 +105,7 @@ $session-font-md: 15px;
 
 @mixin text-highlight($color) {
   background-color: $color;
-  padding: $session-margin-xs $session-margin-sm;
+  padding: var(--margins-xs) var(--margins-sm);
   border-radius: 3px;
   display: inline-block;
 }
@@ -136,21 +136,6 @@ $session-subtle-factor: 0.6;
 @function subtle($color) {
   @return rgba($color, $session-subtle-factor);
 }
-
-// //////////////////////////////////////////////
-// ////////////////// Sizing ////////////////////
-// //////////////////////////////////////////////
-
-// Various Components
-$session-modal-size-sm: 220px;
-$session-modal-size-md: 400px;
-$session-modal-size-lg: 650px;
-
-// Spacing
-$session-margin-xs: 5px;
-$session-margin-sm: 10px;
-$session-margin-md: 15px;
-$session-margin-lg: 20px;
 
 // Animations
 
