feat: remove modal confirm button container
use no padding class on modal instead, less messing around with ghost buttons in certain cases

--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -128,6 +128,13 @@
   .session-confirm-wrapper {
     .session-modal__body {
       width: 376px;
+    }
+  }
+}
+
+.no-body-padding {
+  .session-confirm-wrapper {
+    .session-modal__body {
       padding: 0;
       .session-modal__centered {
         margin: 0;
