fix: allow userprofile modal to be clickable

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -184,6 +184,7 @@ label {
   box-shadow: var(--modal-drop-shadow);
 
   overflow: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 
